# libcdio-discid

./: Makefile  Makefile.am  Makefile.in  autogen.sh  cdio-discid.c  config.h.in~  configure  configure.ac
